Correct uploads done for assignment in wrong repo
Correct uploads done for assignment in wrong repo

--- a/pemberton-linda-project1/pemberton_linda_project1.html
+++ b/pemberton-linda-project1/pemberton_linda_project1.html
@@ -13,7 +13,7 @@
 		<header>
 	
 			<figure>
-				<img src="images/baby_italian_chef" title= "Baby Italian Chef" alt=logo width="479" height="800"/>
+				<img src="images/baby_italian_chef.jpg" title= "Baby Italian Chef" alt=logo width="150" height="150"/>
 				<figcaption><h1>Stile Italiano Ristorante di Famiglia</h1></figcaption>
 			</figure>
 		
@@ -64,7 +64,7 @@
 	
 	<aside>
 		<figure>
-			<img src="images/cappuccino.png" alt="cappuccino" width= "375" height= "541"/>
+			<img src="images/cappuccino.png" alt="cappuccino" width= "89" height= "150"/>
 			<figcaption><a href="http://www.webweaver.nu/clipart/img/misc/food/cappuccino.png">Cappuccino</a></figcaption>
 		</figure>
 		
